--- a/src/main/webapp/assets/fragments/profile.html
+++ b/src/main/webapp/assets/fragments/profile.html
@@ -1,25 +1,12 @@
-<table class="table table-condensed table-striped" width="100%">
-	<thead>
-		<tr>
-			<td align="center"><span id="picture"></span></td>
-			<td colspan="2"><h2><span id="firstName"></span> <span id="lastName"></span></h2></td>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td><span id="tweetCount" class="label"></span><br/>TWEETS</td>
-			<td><span id="friendsCount" class="label"></span><br/>FOLLOWING</td>
-			<td><span id="followersCount" class="label"></span><br/>FOLLOWERS</td>
-		</tr>
-	</tbody>
-	<tfoot>
-		<tr>
-			<td colspan="3">
-				<form class="form-inline">
-					<textarea id="tweetContent" class="focused" placeholder="Type a new tweet..." maxlength="140"></textarea>
-					<button onclick="tweet()" type="button" class="btn btn-primary">Tweet!</button>
-				</form>
-			</td>
-		<tr>
-	</tfoot>
-</table>
+<form id="updateUserForm" onsubmit="return updateProfile();">
+    <label>Email :</label> <input id="emailInput" name="email" type="email"
+                                  placeholder="Enter e-mail..."/>
+    <fieldset>
+        <label>First name :</label> <input id="firstNameInput" name="firstName" type="text"
+                                           placeholder="Enter first name..."/>
+        <label>Last name :</label> <input id="lastNameInput" name="lastName" type="text"
+                                          placeholder="Enter last name..."/>
+    </fieldset>
+
+    <input type="submit" class="btn btn-primary" />
+</form>
