--- a/src/main/webapp/assets/fragments/home.html
+++ b/src/main/webapp/assets/fragments/home.html
@@ -16,7 +16,17 @@
 		<tr>
 			<td colspan="3">
 				<form class="form-inline">
-					<textarea id="tweetContent" class="focused" placeholder="Type a new tweet..." maxlength="140"></textarea>
+					<input id="friendInput" type="text"
+						   placeholder="Type a friend login..."/>
+					<button onclick="addFriend()" type="button" class="btn btn-primary">Follow</button>
+				</form>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="3">
+				<form class="form-inline">
+					<textarea id="tweetContent" class="focused" maxlength="140"
+							  placeholder="Type a new tweet..."></textarea>
 					<button onclick="tweet()" type="button" class="btn btn-primary">Tweet!</button>
 				</form>
 			</td>
