--- a/src/main/webapp/assets/fragments/profile.html
+++ b/src/main/webapp/assets/fragments/profile.html
@@ -10,3 +10,9 @@
 
     <input type="submit" class="btn btn-primary" />
 </form>
+<hr />
+<form class="form-inline">
+	<input id="friendInput" type="text"
+		   placeholder="Type a friend login..."/>
+	<button onclick="addFriend()" type="button" class="btn btn-primary">Follow</button>
+</form>
