--- a/src/main/webapp/assets/fragments/timeline.html
+++ b/src/main/webapp/assets/fragments/timeline.html
@@ -3,7 +3,10 @@
 		<thead>
 			<tr>
 				<th colspan="2"><h2>Tweets list</h2></th>
-				<th colspan="2" align="right"><a href="javascript:listTweets()" title="Refresh"><i id="refreshStatus" class="icon-repeat icon-white"></i></a></th>
+				<th colspan="2" align="right">
+					<span  id="refreshStatus"></span>
+					<a href="javascript:listTweets()" title="Refresh"><i class="icon-repeat icon-white"></i></a>
+				</th>
 			</tr>
 		</thead>
 		<tbody id="tweetsList"></tbody>
