meilleur affichage du status élimination de la fenêtre si pas de WebSockets

--- a/src/main/webapp/assets/fragments/timeline.html
+++ b/src/main/webapp/assets/fragments/timeline.html
@@ -1,10 +1,12 @@
 <section>
+	<header>
+		<div class="alert" id="refreshStatus"></div>
+	</header>
 	<table class="table table-striped" width="100%">
 		<thead>
 			<tr>
 				<th colspan="2"><h2>Tweets list</h2></th>
 				<th colspan="2" align="right">
-					<span  id="refreshStatus"></span>
 					<a href="javascript:listTweets()" title="Refresh"><i class="icon-repeat icon-white"></i></a>
 				</th>
 			</tr>
