consolidations et gestion dynamique de la liste (infinite scroll)

--- a/src/main/webapp/assets/fragments/home.html
+++ b/src/main/webapp/assets/fragments/home.html
@@ -18,7 +18,7 @@
 				<form class="form-inline">
 					<textarea id="tweetContent" class="focused" maxlength="140"
 							  placeholder="Type a new tweet..."></textarea>
-					<button onclick="tweet()" type="button" class="btn btn-primary">Tweet!</button>
+					<button onclick="tweet" type="button" class="btn btn-primary">Tweet!</button>
 				</form>
 			</td>
 		<tr>
