--- a/src/main/webapp/assets/fragments/timeline.html
+++ b/src/main/webapp/assets/fragments/timeline.html
@@ -5,23 +5,12 @@
 	<table class="table table-striped" width="100%">
 		<thead>
 			<tr>
-				<th colspan="2"><h2>Tweets list</h2></th>
-				<th colspan="2" align="right">
-					<a href="javascript:listTweets()" title="Refresh"><i class="icon-repeat icon-white"></i></a>
+				<th colspan="3"><h2>Tweets list</h2></th>
+				<th>
+					<a href="#" onclick="listTweets" title="Refresh"><i class="icon-repeat icon-white"></i></a>
 				</th>
 			</tr>
 		</thead>
 		<tbody id="tweetsList"></tbody>
 	</table>
-	<footer>
-		<div class="pagination">
-			<ul>
-				<li class="disabled"><a href="#">Prev.</a></li>
-				<li class="active"><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
-				<li><a href="#">Next</a></li>
-			</ul>
-		</div>
-	</footer>
 </section>
