optimisation pour éviter les avalanches

--- a/src/main/webapp/assets/fragments/timeline.html
+++ b/src/main/webapp/assets/fragments/timeline.html
@@ -7,7 +7,7 @@
 			<tr>
 				<th colspan="3"><h2>Tweets list</h2></th>
 				<th>
-					<a href="#" onclick="listTweets" title="Refresh"><i class="icon-repeat icon-white"></i></a>
+					<a href="#" onclick="listTweets(true)" title="Refresh"><i class="icon-repeat icon-white"></i></a>
 				</th>
 			</tr>
 		</thead>
