mef et préparation timelines multiples

--- a/src/main/webapp/assets/fragments/profile.html
+++ b/src/main/webapp/assets/fragments/profile.html
@@ -10,9 +10,8 @@
 
     <input type="submit" class="btn btn-primary" />
 </form>
-<hr />
-<form class="form-inline">
-	<input id="friendInput" type="text"
+<form class="form-search">
+	<input id="friendInput" type="text" class="input-medium search-query"
 		   placeholder="Type a friend login..."/>
-	<button onclick="addFriend()" type="button" class="btn btn-primary">Follow</button>
+	<button type="button" class="btn" onclick="addFriend()">Follow</button>
 </form>
