debug profile (évént tab->pill) champs requis dans les formulaires

--- a/src/main/webapp/assets/fragments/profile.html
+++ b/src/main/webapp/assets/fragments/profile.html
@@ -1,5 +1,5 @@
 <form id="updateUserForm" onsubmit="return updateProfile();">
-    <label>Email :</label> <input id="emailInput" name="email" type="email"
+    <label>Email :</label> <input id="emailInput" name="email" type="email" required="required"
                                   placeholder="Enter e-mail..."/>
     <fieldset>
         <label>First name :</label> <input id="firstNameInput" name="firstName" type="text"
