adaptation bootstrap 2.0.2 userline des amis vs timeline avant ça

--- a/src/main/webapp/assets/fragments/home.html
+++ b/src/main/webapp/assets/fragments/home.html
@@ -5,22 +5,19 @@
 			<td colspan="2"><h2><span id="firstName"></span> <span id="lastName"></span></h2></td>
 		</tr>
 	</thead>
+</table>
+<table class="table table-condensed table-striped" width="100%">
 	<tbody>
 		<tr>
-			<td><span id="tweetCount" class="label"></span><br/>TWEETS</td>
-			<td><span id="friendsCount" class="label"></span><br/>FOLLOWING</td>
-			<td><span id="followersCount" class="label"></span><br/>FOLLOWERS</td>
+			<td><span id="tweetCount" class="badge"></span><br/>TWEETS</td>
+			<td><span id="friendsCount" class="badge"></span><br/>FOLLOWING</td>
+			<td><span id="followersCount" class="badge"></span><br/>FOLLOWERS</td>
 		</tr>
 	</tbody>
-	<tfoot>
-		<tr>
-			<td colspan="3">
-				<form class="form-inline">
-					<textarea id="tweetContent" class="focused" maxlength="140"
-							  placeholder="Type a new tweet..."></textarea>
-					<button class="btn btn-primary" onclick="tweet()">Tweet!</button>
-				</form>
-			</td>
-		<tr>
-	</tfoot>
 </table>
+
+<form class="form-inline">
+	<textarea id="tweetContent" class="focused" maxlength="140"
+			  placeholder="Type a new tweet..."></textarea>
+	<button class="btn btn-primary" onclick="tweet()">Tweet!</button>
+</form>
