ajout d'un effet sur les listes de tweets à peaufiner

--- a/src/main/webapp/assets/fragments/timeline.html
+++ b/src/main/webapp/assets/fragments/timeline.html
@@ -1,6 +1,6 @@
 <section id="timeline">
 	<header>
-		<div class="alert" id="refreshStatus"></div>
+		<div class="alert" id="refreshStatus" hidden="hidden"></div>
 	</header>
 	<table class="table table-striped" width="100%">
 		<thead>
