--- a/src/main/webapp/assets/fragments/friendTimeline.html
+++ b/src/main/webapp/assets/fragments/friendTimeline.html
@@ -1,5 +1,5 @@
 <section id="friendTimeline">
-	<table class="table table-striped" width="100%">
+	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th colspan="4"><h2>Friend tweets list</h2></th>
