--- a/src/main/webapp/assets/fragments/home.html
+++ b/src/main/webapp/assets/fragments/home.html
@@ -5,7 +5,7 @@
 			<h2><span id="firstName"></span> <span id="lastName"></span></h2>
 		</div>
 	</div>
-	<div class="well row-fluid">
+	<div class="well well-small row-fluid">
 		<div class="span4">
 			<span id="tweetCount" class="badge"></span><br/>TWEETS
 		</div>
