--- a/src/main/webapp/assets/fragments/timeline.html
+++ b/src/main/webapp/assets/fragments/timeline.html
@@ -2,7 +2,7 @@
 	<header>
 		<div class="alert" id="refreshStatus" hidden="hidden"></div>
 	</header>
-	<table class="table table-striped" width="100%">
+	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th colspan="3"><h2>Tweets list</h2></th>
