debug formulaires suite à l'upgrade bootstrap 2.0.2

--- a/src/main/webapp/assets/fragments/profile.html
+++ b/src/main/webapp/assets/fragments/profile.html
@@ -11,8 +11,8 @@
     <button type="submit" class="btn btn-primary">Change</button>
 </form>
 <hr/>
-<form class="form-search">
+<form class="form-search" onsubmit="return addFriend();">
 	<input id="friendInput" type="text" class="input-large search-query"
 		   placeholder="Type friend login..."/>
-	<button class="btn btn-inverse" onclick="addFriend()">Follow</button>
+	<button type="submit" class="btn btn-inverse">Follow</button>
 </form>
