--- a/src/main/webapp/assets/fragments/home.html
+++ b/src/main/webapp/assets/fragments/home.html
@@ -18,10 +18,10 @@
 	</div>
 	<div class="row-fluid">
 		<div class="span12">
-			<form class="form-inline">
+			<form class="form-inline" onsubmit="return tweet();">
 				<textarea id="tweetContent" class="focused" maxlength="140"
 						  placeholder="Type a new tweet..."></textarea>
-				<button class="btn btn-primary" onclick="tweet()">Tweet!</button>
+				<button type="submit" class="btn btn-primary">Tweet!</button>
 			</form>
 		</div>
 	</div>
