--- a/src/main/webapp/assets/fragments/home.html
+++ b/src/main/webapp/assets/fragments/home.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row-fluid">
-		<div id="picture" class="span3"></div>
+		<div class="span3"><img id="picture"/></div>
 		<div class="span9">
 			<h2><span id="firstName"></span> <span id="lastName"></span></h2>
 		</div>
