--- a/src/main/webapp/assets/fragments/timeline.html
+++ b/src/main/webapp/assets/fragments/timeline.html
@@ -12,5 +12,10 @@
 			</tr>
 		</thead>
 		<tbody id="tweetsList"></tbody>
+		<tfooter>
+			<tr>
+				<td colspan="4"><i class="icon-download"></i> <em>Scroll down to get more tweets.</em></td>
+			</tr>
+		</tfooter>
 	</table>
 </section>
