--- a/src/main/webapp/assets/fragments/followUser.html
+++ b/src/main/webapp/assets/fragments/followUser.html
@@ -1,6 +1,6 @@
-<form class="form-search">
-    Follow a user...<br/>
+<form class="form-search" onsubmit="return followUser();">
+    <strong>Follow a user...</strong><br/>
 	<input id="followUserInput" type="text" class="input-large search-query"
-		   placeholder="Type the login to follow..."/>
-	<button type="button" class="btn btn-primary" onclick="followUser($('#followUserInput').val())">Follow</button>
+		   placeholder="Type the login to follow..." required="required"/>
+	<button type="submit" class="btn btn-primary">Follow</button>
 </form>
