gestion des erreurs sur addFriend

--- a/src/main/webapp/assets/fragments/followUser.html
+++ b/src/main/webapp/assets/fragments/followUser.html
@@ -4,3 +4,4 @@
 		   placeholder="Type the login to follow..." required="required"/>
 	<button type="submit" class="btn btn-primary">Follow</button>
 </form>
+<div class="alert" id="followStatus" hidden="hidden"></div>
