Refactored "follow user" feature

--- a/src/main/webapp/assets/fragments/followUser.html
+++ b/src/main/webapp/assets/fragments/followUser.html
@@ -1,4 +1,4 @@
-<form class="form-search" onsubmit="return followUser();">
+<form class="form-search" onsubmit="return followUser($('#followUserInput').val());">
     <strong>Follow a user...</strong><br/>
 	<input id="followUserInput" type="text" class="input-large search-query"
 		   placeholder="Type the login to follow..." required="required"/>
