--- a/src/main/webapp/assets/fragments/profile.html
+++ b/src/main/webapp/assets/fragments/profile.html
@@ -8,6 +8,6 @@
                                   placeholder="Enter last name..." class="input-xlarge"/>
     </fieldset>
 
-    <button type="submit" class="btn btn-primary">Change</button>
+    <button type="submit" class="btn btn-primary">Update</button>
 </form>
 
