popover userline : user's profile

--- a/src/main/webapp/assets/fragments/userline.html
+++ b/src/main/webapp/assets/fragments/userline.html
@@ -2,7 +2,9 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th colspan="4"><h2>User tweets list</h2></th>
+				<th colspan="4">
+					<h2><img id="userPicture" rel="popover"/> User tweets list</h2>
+				</th>
 			</tr>
 		</thead>
 		<tbody id="userTweetsList"></tbody>
