refonte de l'alerte "tweets vides"

--- a/src/main/webapp/assets/fragments/home.html
+++ b/src/main/webapp/assets/fragments/home.html
@@ -19,7 +19,7 @@
 	<div class="row-fluid">
 		<div class="span12">
 			<form class="form-inline" onsubmit="return tweet();">
-				<textarea id="tweetContent" class="focused" maxlength="140"
+				<textarea id="tweetContent" rel="popover" class="focused" maxlength="140"
 						  placeholder="Type a new tweet..."></textarea>
 				<button type="submit" class="btn btn-primary">Tweet!</button>
 			</form>
