décoration et fonction 'trending' qui en fait liste les tweets correspondant au hashtag par défaut qui fait désormais partie des propriétés injectées par Spring

--- a/src/main/webapp/assets/fragments/followUser.html
+++ b/src/main/webapp/assets/fragments/followUser.html
@@ -1,6 +1,6 @@
 <section id="followline">
     <div>
-        <strong>Follow another user...</strong>
+        <i class="icon-zoom-in icon-white"></i> <strong>Follow another user...</strong>
 
         <form class="form-search" onsubmit="return followUser(($('#followUserInput').val()))">
             <input id="followUserInput" type="text" class="input-large search-query"
@@ -11,7 +11,7 @@
     </div>
 
     <div>
-        <strong>Who to follow</strong>
+        <i class="icon-random icon-white"></i> <strong>Who to follow</strong>
         <table class="table table-striped">
             <tbody id="suggestions"></tbody>
 	    </table>
