--- a/src/main/webapp/assets/fragments/tagline.html
+++ b/src/main/webapp/assets/fragments/tagline.html
@@ -2,8 +2,9 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th colspan="4">
-					<h2>Tag tweets list</h2>
+				<th colspan="3"><h2>Tag tweets list</h2></th>
+				<th>
+					<a href="#" onclick="listTagTweets(null)" title="See the trend"><i class="icon-tags icon-white"></i></a>
 				</th>
 			</tr>
 		</thead>
