some refactors in order to clean the js... such a mess : remind a thing to do means a function

--- a/src/main/webapp/assets/css/tatami-custom.css
+++ b/src/main/webapp/assets/css/tatami-custom.css
@@ -10,3 +10,12 @@
 .tweetDate {
     width: 68;
 }
+
+
+section#timeline table tbody#tweetsList tr.alignVerticalContentOfAHtmlTweetLine{
+    vertical-align: top;
+}
+
+section#timeline table tbody#tweetsList tr.alignVerticalContentOfAHtmlTweetLine td.avatar{
+    width:34px;
+}
