--- a/src/main/webapp/assets/fragments/piechart.html
+++ b/src/main/webapp/assets/fragments/piechart.html
@@ -1,4 +1,4 @@
 <section id="day_statistics">
-	<h2>Day tweets statistics</h2>
+	<h2>Tweets of the day</h2>
 	<div id="piechart_div" style="width: 640px; height: 400px;"></div>
 </section>
