--- a/src/main/webapp/assets/fragments/punchchart.html
+++ b/src/main/webapp/assets/fragments/punchchart.html
@@ -1,4 +1,4 @@
 <section id="week_statistics">
-	<h2>Week tweets statistics</h2>
+	<h2>Tweet of the week</h2>
 	<div id="punchchart_div" style="width: 800px; height: 300px;"></div>
 </section>
