--- a/src/main/webapp/WEB-INF/layouts/tiles.xml
+++ b/src/main/webapp/WEB-INF/layouts/tiles.xml
@@ -3,13 +3,13 @@
 
 <tiles-definitions>
 
-    <definition name="home" template="/WEB-INF/layouts/standard/home.jsp">
+    <definition name="home" templateExpression="/WEB-INF/layouts/${currentDevice.mobile ? 'mobile/' : 'standard/'}/home.jsp">
     </definition>
 
-    <definition name="login" template="/WEB-INF/layouts/standard/login.jsp">
+    <definition name="login" templateExpression="/WEB-INF/layouts/${currentDevice.mobile ? 'mobile/' : 'standard/'}/login.jsp">
     </definition>
 
-    <definition name="about" template="/WEB-INF/layouts/standard/about.jsp">
+    <definition name="about" templateExpression="/WEB-INF/layouts/standard/about.jsp">
     </definition>
 
 </tiles-definitions>
