--- a/src/main/webapp/WEB-INF/layouts/tiles.xml
+++ b/src/main/webapp/WEB-INF/layouts/tiles.xml
@@ -8,6 +8,9 @@
 
     <definition name="login" templateExpression="/WEB-INF/layouts/${currentDevice.mobile ? 'mobile/' : 'standard/'}/login.jsp">
     </definition>
+    
+    <definition name="profile" templateExpression="/WEB-INF/layouts/${currentDevice.mobile ? 'mobile/' : 'standard/'}/profile.jsp">
+    </definition>
 
     <definition name="about" templateExpression="/WEB-INF/layouts/standard/about.jsp">
     </definition>
