follow/unfollow user on profile page

--- a/src/main/webapp/assets/css/tatami-custom.css
+++ b/src/main/webapp/assets/css/tatami-custom.css
@@ -25,6 +25,10 @@ section#timeline table tbody#tweetsList tr.alignVerticalContentOfAHtmlTweetLine 
 	font-weight:bold;
 }
 
+.hide{
+	display:none;
+}
+
 section#followline ul#usersSuggestions{
 	display:			none;
 	background-color: 	#D9EDF7;
