--- a/src/main/webapp/assets/fragments/followUser.html
+++ b/src/main/webapp/assets/fragments/followUser.html
@@ -2,41 +2,42 @@
     <div>
         <i class="icon-zoom-in icon-white"></i> <strong>Follow another user...</strong>
 
-        <form id="followUserForm" class="form-search" onsubmit="return followUser(($('#followUserInput').val()))" htmlEscape="true" >
+        <form id="followUserForm" class="form-search" onsubmit="return followUser(($('#followUserInput').val()))"
+              htmlEscape="true">
             <input id="followUserInput" type="text" class="input-large search-query"
                    placeholder="Type the login to follow..." required="required"/>
-             <ul id="usersSuggestions"></ul>
-             
+            <ul id="usersSuggestions"></ul>
+
             <button type="submit" class="btn btn-primary">Follow</button>
         </form>
-        
-		<div class="alert" id="followStatus" hidden="hidden"></div>
+
+        <div class="alert" id="followStatus" hidden="hidden"></div>
     </div>
 
     <div>
         <i class="icon-random icon-white"></i> <strong>Who to follow</strong>
         <table class="table table-striped">
             <tbody id="suggestions"></tbody>
-	    </table>
+        </table>
     </div>
 </section>
 <script type="text/javascript">
-	$(document).ready( function () {
-		var $inputUserToFollow = $("section#followline input#followUserInput");
-		
-		$inputUserToFollow.keyup(function() {
-			searchUsers($(this).val());
-		});
-		
-		$inputUserToFollow.blur( function() {
-			setTimeout("$('#usersSuggestions').hide();", 200);
-		});
-		
-		$('#usersSuggestions li').live('click', function(event){
-		    event.preventDefault();
-		    event.stopPropagation();
-			$inputUserToFollow.val($(this).text());
-			$("#followUserForm").submit();
-		})
-	});
+    $(document).ready(function () {
+        var $inputUserToFollow = $("section#followline input#followUserInput");
+
+        $inputUserToFollow.keyup(function() {
+            searchUsers($(this).val());
+        });
+
+        $inputUserToFollow.blur(function() {
+            setTimeout("$('#usersSuggestions').hide();", 200);
+        });
+
+        $('#usersSuggestions li').live('click', function(event) {
+            event.preventDefault();
+            event.stopPropagation();
+            $inputUserToFollow.val($(this).text());
+            $("#followUserForm").submit();
+        })
+    });
 </script>
