--- a/src/main/webapp/assets/fragments/timeline.html
+++ b/src/main/webapp/assets/fragments/timeline.html
@@ -1,19 +1,20 @@
 <section id="timeline">
-	<header>
-		<div class="alert" id="refreshStatus" hidden="hidden"></div>
-	</header>
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th colspan="3"><h2>Tweets list</h2></th>
-				<th>
-					<a href="#" onclick="listTweets(true)" title="Refresh - shortcut : ctrl+R"><i class="icon-repeat icon-white"></i></a>
-				</th>
-			</tr>
-		</thead>
-		<tbody id="tweetsList"></tbody>
-	</table>
-	<footer>
-		<i class="icon-download"></i> <em>Scroll down to get more tweets.</em>
-	</footer>
+    <header>
+        <div class="alert" id="refreshStatus" hidden="hidden"></div>
+    </header>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th colspan="3"><h2>Tweets list</h2></th>
+            <th>
+                <a href="#" onclick="listTweets(true)" title="Refresh - shortcut : ctrl+R"><i
+                        class="icon-repeat icon-white"></i></a>
+            </th>
+        </tr>
+        </thead>
+        <tbody id="tweetsList"></tbody>
+    </table>
+    <footer>
+        <i class="icon-download"></i> <em>Scroll down to get more tweets.</em>
+    </footer>
 </section>
