Refactored most of the REST request to have a clean API

--- a/src/main/webapp/assets/fragments/userline.html
+++ b/src/main/webapp/assets/fragments/userline.html
@@ -1,12 +1,12 @@
 <section id="userline">
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span2"></div>
+            <div class="span2"><img id="userPicture"/></div>
+            <div class="span8" id="userDetails"></div>
+        </div>
+    </div>
     <table class="table table-striped">
-        <thead>
-        <tr>
-            <th colspan="4">
-                <h2><img id="userPicture" rel="popover"/> User tweets list</h2>
-            </th>
-        </tr>
-        </thead>
         <tbody id="userTweetsList"></tbody>
     </table>
 </section>
