Refactored all the REST APIs to match Twitter's API

--- a/src/main/webapp/assets/fragments/favline.html
+++ b/src/main/webapp/assets/fragments/favline.html
@@ -4,7 +4,7 @@
         <tr>
             <th colspan="3"><h2>Favorite tweets list</h2></th>
             <th>
-                <a href="#" onclick="listFavoriteTweets()" title="Refresh"><i class="icon-repeat icon-white"></i></a>
+                <a href="#" onclick="favoriteTweets()" title="Refresh"><i class="icon-repeat icon-white"></i></a>
             </th>
         </tr>
         </thead>
