--- a/src/main/webapp/WEB-INF/layouts/tiles.xml
+++ b/src/main/webapp/WEB-INF/layouts/tiles.xml
@@ -12,7 +12,8 @@
     <definition name="profile" templateExpression="/WEB-INF/layouts/${currentDevice.mobile ? 'mobile/' : 'standard/'}/profile.jsp">
     </definition>
 
-    <definition name="about" templateExpression="/WEB-INF/layouts/standard/about.jsp">
-    </definition>
+    <definition name="about" templateExpression="/WEB-INF/layouts/standard/about.jsp"/>
+    <definition name="404-error" templateExpression="/WEB-INF/layouts/standard/404-error.jsp"/>
+    <definition name="500-error" templateExpression="/WEB-INF/layouts/standard/500-error.jsp"/>
 
 </tiles-definitions>
