--- a/src/main/webapp/assets/fragments/followUser.html
+++ b/src/main/webapp/assets/fragments/followUser.html
@@ -26,7 +26,7 @@
         var $inputUserToFollow = $("section#followline input#followUserInput");
 
         $inputUserToFollow.keyup(function() {
-            autocompleteUser($(this).val());
+            searchUser($(this).val());
         });
 
         $inputUserToFollow.blur(function() {
