--- a/src/main/webapp/assets/css/tatami-custom.css
+++ b/src/main/webapp/assets/css/tatami-custom.css
@@ -1,3 +1,7 @@
+body {
+    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+}
+
 #tweetsList {
   color:#000000;
 }
@@ -10,8 +14,6 @@
 .tweetDate {
     width: 68;
 }
-
-
 section#timeline table tbody#tweetsList tr.alignVerticalContentOfAHtmlTweetLine {
     vertical-align: top;
 }
