--- a/src/main/webapp/WEB-INF/layouts/tiles.xml
+++ b/src/main/webapp/WEB-INF/layouts/tiles.xml
@@ -3,13 +3,13 @@
 
 <tiles-definitions>
 
-    <definition name="home" templateExpression="/WEB-INF/layouts/${currentDevice.mobile ? 'mobile/' : 'standard/'}/home.jsp">
+    <definition name="home" templateExpression="/WEB-INF/layouts/${currentDevice.normal ? 'standard/' : 'mobile/'}/home.jsp">
     </definition>
 
-    <definition name="login" templateExpression="/WEB-INF/layouts/${currentDevice.mobile ? 'mobile/' : 'standard/'}/login.jsp">
+    <definition name="login" templateExpression="/WEB-INF/layouts/${currentDevice.normal ? 'standard/' : 'mobile/'}/login.jsp">
     </definition>
     
-    <definition name="profile" templateExpression="/WEB-INF/layouts/${currentDevice.mobile ? 'mobile/' : 'standard/'}/profile.jsp">
+    <definition name="profile" templateExpression="/WEB-INF/layouts/${currentDevice.normal ? 'standard/' : 'mobile/'}/profile.jsp">
     </definition>
 
     <definition name="about" templateExpression="/WEB-INF/layouts/standard/about.jsp"/>
