--- a/src/main/webapp/assets/fragments/standard/timeline.html
+++ b/src/main/webapp/assets/fragments/standard/timeline.html
@@ -5,7 +5,7 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th colspan="3"><h2>Tweets list</h2></th>
+            <th colspan="3"><h2>Tweet list</h2></th>
             <th>
                 <a href="#" onclick="listTweets(true)" title="Refresh - shortcut : ctrl+R"><i
                         class="icon-repeat icon-white"></i></a>
