--- a/src/main/webapp/assets/fragments/standard/updateProfile.html
+++ b/src/main/webapp/assets/fragments/standard/updateProfile.html
@@ -3,16 +3,16 @@
         <div class="span3">
             <form id="updateUserForm" onsubmit="return updateProfile();">
                 <label>Email :</label> <input id="emailInput" name="email" type="email" required="required"
-                                              size="20" maxlength="60"
-                                              placeholder="Enter e-mail..." class="input-xlarge"/>
+                                              size="15" maxlength="60"
+                                              placeholder="Enter e-mail..."/>
                 <fieldset>
                     <label>First name :</label> <input id="firstNameInput" name="firstName" type="text"
                                                        required="required"
-                                                       size="20" maxlength="40"
-                                                       placeholder="Enter first name..." class="input-xlarge"/>
+                                                       size="15" maxlength="40"
+                                                       placeholder="Enter first name..."/>
                     <label>Last name :</label> <input id="lastNameInput" name="lastName" type="text" required="required"
-                                                      size="20" maxlength="40"
-                                                      placeholder="Enter last name..." class="input-xlarge"/>
+                                                      size="15" maxlength="40"
+                                                      placeholder="Enter last name..."/>
                 </fieldset>
 
                 <button type="submit" class="btn btn-primary">Update</button>
