--- a/src/main/webapp/assets/css/tatami-custom.css
+++ b/src/main/webapp/assets/css/tatami-custom.css
@@ -10,12 +10,12 @@ body {
     color: #000000;
 }
 
-.tweetFriend {
+.tweetActions {
     width: 48px;
 }
 
 .tweetDate {
-    width: 68px;
+    width: 48px;
 }
 
 section#timeline table tbody#tweetsList tr.tweet {
@@ -105,6 +105,7 @@ div#userProfileDesc {
 footer {
     margin-top: 10px;
     padding-top: 10px;
+    padding-bottom: 20px;
     border-top: 1px dotted #cccccc;
 }
 
