--- a/src/main/webapp/assets/fragments/standard/timeline.html
+++ b/src/main/webapp/assets/fragments/standard/timeline.html
@@ -5,9 +5,9 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th colspan="3"><h2>Tweet list</h2></th>
+            <th colspan="3"><h2>Tweets</h2></th>
             <th>
-                <a href="#" onclick="listTweets(true)" title="Refresh - shortcut : ctrl+R"><i
+                <a href="#" id="refreshTweets" title="Refresh - shortcut : ctrl+R"><i
                         class="icon-repeat icon-white"></i></a>
             </th>
         </tr>
