--- a/src/main/webapp/assets/css/tatami-custom.css
+++ b/src/main/webapp/assets/css/tatami-custom.css
@@ -7,11 +7,7 @@ body {
     width: 937px;
 }
 
-#tweetsList {
-    color: #000000;
-}
-
-#friendTweetsList {
+.tweetsList {
     color: #000000;
 }
 
@@ -38,30 +34,6 @@ section#timeline table tbody#tweetsList tr.tweet {
 
 .hide {
     display: none;
-}
-
-section#followline ul#usersSuggestions {
-    display: none;
-    background-color: #D9EDF7;
-    border: 1px solid #BCE8F1;
-    border-radius: 14px 14px 14px 14px;
-    color: #3A87AD;
-    left: 34px;
-    margin: 0;
-    padding: 0px 14px;
-    position: absolute;
-    width: 210px;
-}
-
-section#followline ul#usersSuggestions li {
-    cursor: pointer;
-    list-style: none outside none;
-    margin: 0px;
-    padding: 3px;
-}
-
-section#followline ul#usersSuggestions li:hover {
-    color: #555555;
 }
 
 div#userProfileDesc {
