--- a/src/main/webapp/assets/fragments/standard/favline.html
+++ b/src/main/webapp/assets/fragments/standard/favline.html
@@ -8,6 +8,6 @@
             </th>
         </tr>
         </thead>
-        <tbody id="favTweetsList"></tbody>
+        <tbody id="favTweetsList" class="tweetsList"></tbody>
     </table>
 </section>
