--- a/src/main/webapp/assets/fragments/standard/searchline.html
+++ b/src/main/webapp/assets/fragments/standard/searchline.html
@@ -8,6 +8,6 @@
             </th>
         </tr>
         </thead>
-        <tbody id="searchTweetsList"></tbody>
+        <tbody id="searchTweetsList" class="tweetsList"></tbody>
     </table>
 </section>
