--- a/src/main/webapp/assets/fragments/standard/tagline.html
+++ b/src/main/webapp/assets/fragments/standard/tagline.html
@@ -8,6 +8,6 @@
             </th>
         </tr>
         </thead>
-        <tbody id="tagTweetsList"></tbody>
+        <tbody id="tagTweetsList" class="tweetsList"></tbody>
     </table>
 </section>
