--- a/src/main/webapp/assets/fragments/standard/timeline.html
+++ b/src/main/webapp/assets/fragments/standard/timeline.html
@@ -12,7 +12,7 @@
             </th>
         </tr>
         </thead>
-        <tbody id="tweetsList"></tbody>
+        <tbody id="tweetsList" class="tweetsList"></tbody>
     </table>
     <footer>
         <i class="icon-download"></i> <em>Scroll down to get more tweets.</em>
